[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/LetterBag.png" type="Texture" id=1]
[ext_resource path="res://WordBag.gd" type="Script" id=2]
[ext_resource path="res://Playspace.gd" type="Script" id=3]
[ext_resource path="res://Board.gd" type="Script" id=4]
[ext_resource path="res://PlayerWords.gd" type="Script" id=5]
[ext_resource path="res://ComputerWords.gd" type="Script" id=6]
[ext_resource path="res://Assets/Backdrop.png" type="Texture" id=7]
[ext_resource path="res://Assets/Instruction Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/textboxbackdrop.png" type="Texture" id=9]
[ext_resource path="res://ScoreLabel.tscn" type="PackedScene" id=10]
[ext_resource path="res://LineEdit.gd" type="Script" id=11]
[ext_resource path="res://Assets/TileShake_Master.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/TilePlace.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/WordFormed_Master.wav" type="AudioStream" id=14]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 139, 32 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 139, 32 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 75
font_data = ExtResource( 8 )

[node name="Playspace" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 994.19, 559.068 )
scale = Vector2( 1.1938, 1.1938 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="OppScore" parent="." instance=ExtResource( 10 )]
margin_left = 668.0
margin_top = 345.0
margin_right = 752.0
margin_bottom = 536.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 42, 95 )
custom_colors/font_color = Color( 1, 0.431373, 0.431373, 1 )

[node name="PlayerScore" parent="." instance=ExtResource( 10 )]
margin_left = 1168.0
margin_top = 345.0
margin_right = 1252.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 42, 95 )
custom_colors/font_color = Color( 0.364706, 0.662745, 0.913725, 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 800.0
margin_top = 580.0
margin_right = 1120.0
margin_bottom = 634.0
rect_pivot_offset = Vector2( 160, 27 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0.792157, 0.635294, 0.498039, 1 )
custom_colors/font_color = Color( 0.792157, 0.635294, 0.498039, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.568627, 0, 0, 1 )
align = 1
max_length = 15
context_menu_enabled = false
placeholder_text = "enter word here"
placeholder_alpha = 0.429
caret_blink = true
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pause" type="Timer" parent="LineEdit"]
wait_time = 0.4
one_shot = true

[node name="WordBag" type="Node2D" parent="."]
position = Vector2( 958, 438 )
scale = Vector2( 0.45, 0.45 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bag" type="Sprite" parent="WordBag"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileCount" type="Label" parent="WordBag"]
margin_left = -46.3079
margin_top = -4.44873
margin_right = 59.6921
margin_bottom = 115.551
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.921569, 0.941176, 1 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Board" type="Node2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ComputerWords" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CalculationTimer" type="Timer" parent="ComputerWords"]
wait_time = 4.0
autostart = true

[node name="PlayerWords" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="PluckTileTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="AnimationTimerComputer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="TileSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0
pitch_scale = 1.5

[node name="WordForm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0

[node name="TileShake" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="LineEdit/Pause" to="LineEdit" method="_on_Pause_timeout"]
[connection signal="timeout" from="ComputerWords/CalculationTimer" to="ComputerWords" method="_on_Timer_timeout"]
[connection signal="timeout" from="PluckTileTimer" to="." method="_on_PluckTileTimer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="PlayerWords" method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="AnimationTimerComputer" to="ComputerWords" method="_on_AnimationTimerComputer_timeout"]
